test/org/midica/testfiles/failing/pattern-before-instruments.midica

PATTERN pat
	0,1 /4
END

0  c,d  pat
